data/derived/fa15/progs/unify/prog3710.ml.out
Characters 61-84:
  let f a x = ((mulByDigit x l1)@[clone 0 (List.length a)])::a in
                                  ^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list list
       but an expression was expected of type int
